--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-COMPANY_NAME="Vercel Inc."
-TWITTER_CREATOR="@vercel"
-TWITTER_SITE="https://nextjs.org/commerce"
-SITE_NAME="Next.js Commerce"
-SHOPIFY_REVALIDATION_SECRET=""
-SHOPIFY_STOREFRONT_ACCESS_TOKEN=""
-SHOPIFY_STORE_DOMAIN="[your-shopify-store-subdomain].myshopify.com"
+COMPANY_NAME="Yosoymaestro."
+TWITTER_CREATOR="@yosoymaestro"
+TWITTER_SITE="https://yosoymaestro-store.vercel.app/"
+SITE_NAME="Yosoymaestro Store"
+SHOPIFY_REVALIDATION_SECRET="bd981df0-8317-415a-825f-3f3e045d69ae"
+SHOPIFY_STOREFRONT_ACCESS_TOKEN="12f5fb006932eb79e28e180308a34538"
+SHOPIFY_STORE_DOMAIN="yosoymaestro.myshopify.com"
